[gd_scene load_steps=5 format=3 uid="uid://ds66lujjolvu"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_7td25"]
[ext_resource type="Texture2D" uid="uid://o1xm76qu6h8h" path="res://DicePNGs/white/unknown-die.png" id="1_8u0cm"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/theme_list_item.gd" id="1_nqdu6"]
[ext_resource type="Material" uid="uid://jw3i2ootl1tq" path="res://Resources/Shader/dice_tint_shader_material.tres" id="3_qok2k"]

[node name="ThemeListItem" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
size_flags_vertical = 3
theme = ExtResource("1_7td25")
script = ExtResource("1_nqdu6")

[node name="PreviewDieView" type="TextureRect" parent="."]
material = ExtResource("3_qok2k")
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("1_7td25")
texture = ExtResource("1_8u0cm")
expand_mode = 1
stretch_mode = 5

[node name="SelectButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Theme Name"

[node name="PreviewColorRect" type="ColorRect" parent="."]
material = ExtResource("3_qok2k")
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_7td25")

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
